# nunjitsu

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsdown.config.ts
.cargo/: config.toml
.changeset/: add-render-value.md  align-closed-value-semantics.md  align-parser-compatibility.md  align-scope-and-loop-semantics.md  align-standard-library-semantics.md  bound-aliased-value-expansion.md  caller-default-slots.md  calm-dragons-smile.md  canonical-callable-switch-identity.md  central-closed-coercion.md  clear-legacy-regexp-state.md  close-standard-library-coercion.md  closed-array-copy.md  closed-equality-semantics.md  closed-json-containers.md  closed-record-loop-planning.md  closed-safe-string-fields.md  complete-bidi-diagnostics.md  complete-declaration-validation.md  config.json  (+75 more)
rust/: Cargo.toml
rust/src/: expression.rs  lib.rs  template.rs  wasm.rs
rust/src/expression/: arguments.rs  atoms.rs  base.rs  directives.rs  mod.rs  tests.rs
rust/src/template/: boundaries.rs  mod.rs  render.rs  syntax.rs  tests.rs
rust/src/wasm/: constants.rs  mod.rs
rust/src/wasm/evaluation/: continuations.rs  expressions.rs  output.rs
rust/src/wasm/filters/: builtins.rs  collections.rs  json.rs  text.rs  web.rs
rust/src/wasm/model/: arena.rs  layout.rs  registry.rs  storage.rs  values.rs
rust/src/wasm/runtime/: abi.rs  loops.rs  macros.rs  tags.rs  templates.rs
rust/tests/: compat.rs
(+81 files in other folders)
